<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/guidesquare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="800dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="-50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <TextView
        android:id="@+id/Logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/aileron_bold"
        android:textColor="#FFFFFF"
        android:text="Login"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/orcreateaccounttext"
        app:layout_constraintStart_toStartOf="@+id/loginImageButton"
        app:layout_constraintTop_toBottomOf="@+id/guidesquare"></TextView>

    <TextView
        android:id="@+id/orcreateaccounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Sign in or create account"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/Logintext"
        app:layout_constraintTop_toBottomOf="@+id/Logintext"></TextView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aileron_bold"
        android:text="USERNAME"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameSquare"
        app:layout_constraintStart_toStartOf="@+id/Logintext"
        app:layout_constraintTop_toBottomOf="@+id/orcreateaccounttext"></TextView>

    <ImageView
        android:id="@+id/usernameSquare"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:alpha="0.4"
        android:contentDescription="usernamesquare"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/loginImageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/loginImageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/loginsignuptextboxaccent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aileron_bold"
        android:text="PASSWORD"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordSquare"
        app:layout_constraintStart_toStartOf="@+id/Logintext"
        app:layout_constraintTop_toBottomOf="@+id/usernameSquare"></TextView>

    <ImageButton
        android:id="@+id/passwordSquare"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:alpha="0.4"
        android:contentDescription="Enter Password Here"
        app:layout_constraintBottom_toTopOf="@+id/loginImageButton"
        app:layout_constraintEnd_toEndOf="@+id/loginImageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/loginImageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/loginsignuptextboxaccent" />

    <EditText
        android:id="@+id/login_username_edt"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:background="@null"
        android:fontFamily="@font/aileron_bold"
        android:hint="Enter Username Here"
        android:textColor="#1C2120"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/usernameSquare"
        app:layout_constraintEnd_toEndOf="@id/usernameSquare"
        app:layout_constraintStart_toStartOf="@+id/usernameSquare"
        app:layout_constraintTop_toTopOf="@+id/usernameSquare"></EditText>

    <EditText
        android:id="@+id/login_password_edt"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:background="@null"
        android:fontFamily="@font/aileron_bold"
        android:hint="Enter Password Here"
        android:inputType="textPassword"
        android:textColor="#1C2120"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordSquare"
        app:layout_constraintEnd_toEndOf="@id/passwordSquare"
        app:layout_constraintStart_toStartOf="@+id/passwordSquare"
        app:layout_constraintTop_toTopOf="@+id/passwordSquare"></EditText>

    <ImageView
        android:id="@+id/loginImageButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:contentDescription="login"
        app:layout_constraintBottom_toTopOf="@+id/signupImageButton"
        app:layout_constraintEnd_toEndOf="@+id/guidesquare"
        app:layout_constraintStart_toStartOf="@+id/guidesquare"
        app:layout_constraintTop_toBottomOf="@+id/passwordSquare"
        app:srcCompat="@drawable/loginbox" />

    <Button
        android:id="@+id/login_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Log in"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginImageButton"
        app:layout_constraintEnd_toEndOf="@+id/loginImageButton"
        app:layout_constraintStart_toStartOf="@+id/loginImageButton"
        app:layout_constraintTop_toTopOf="@+id/loginImageButton" />

    <ImageView
        android:id="@+id/signupImageButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:contentDescription="sign up"
        app:layout_constraintBottom_toTopOf="@+id/guidesquare"
        app:layout_constraintEnd_toEndOf="@+id/loginImageButton"
        app:layout_constraintStart_toStartOf="@+id/loginImageButton"
        app:layout_constraintTop_toBottomOf="@+id/loginImageButton"
        app:srcCompat="@drawable/loginbox" />

    <Button
        android:id="@+id/signup_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Sign up"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/signupImageButton"
        app:layout_constraintEnd_toEndOf="@+id/signupImageButton"
        app:layout_constraintStart_toStartOf="@+id/signupImageButton"
        app:layout_constraintTop_toTopOf="@+id/signupImageButton"></Button>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/ortext"
        app:layout_constraintEnd_toStartOf="@+id/ortext"
        app:layout_constraintStart_toStartOf="@+id/login_password_edt"
        app:layout_constraintTop_toTopOf="@+id/ortext"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/ortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/m_plus_rounded_1c_bold"
        android:text="or"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginImageButton"
        app:layout_constraintEnd_toEndOf="@+id/guidesquare"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/loginImageButton" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/ortext"
        app:layout_constraintEnd_toEndOf="@+id/login_password_edt"
        app:layout_constraintStart_toEndOf="@+id/ortext"
        app:layout_constraintTop_toTopOf="@+id/ortext"
        app:srcCompat="@drawable/img" />


</androidx.constraintlayout.widget.ConstraintLayout>